--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,18 @@
+/*body {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-column-gap: 0.5rem;
+}
+
+.active {
+  background-color: lightblue;
+}
+
+.drop-target {
+  background-color: lightgray;
+}
+*/
+
 table {
   font-variant-numeric: lining-nums tabular-nums;
   border-collapse: collapse;
